[package]
name = "tilted"
version = "0.2.0"
edition = "2021"
description = "A non-Turing-complete interpreted programming 'language' that can do maths (only)."
license = "MIT"
homepage = "https://github.com/SaltedPeanutButter/tilted"
repository = "https://github.com/SaltedPeanutButter/tilted"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tilted"
required-features = ["cli"]

[features]
default = ["serde", "cli"]
cli = ["dep:argh"]
serde = ["dep:serde"]

[dependencies]
argh = { version = ">=0.1", optional = true }
serde = { version = ">=1.0", optional = true }