[package]
name = "tilted"
version = "0.4.0-beta.2"
edition = "2021"
description = "A non-Turing-complete interpreted programming 'language' that can do maths (only)."
license = "MIT"
homepage = "https://github.com/SaltedPeanutButter/tilted"
repository = "https://github.com/SaltedPeanutButter/tilted"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tilted"
required-features = ["cli"]

[features]
default = ["serde", "cli"]
cli = ["dep:clap"]
serde = ["dep:serde", "dep:typetag"]

[dependencies]
clap = { version = "4.4.2", features = ["derive"], optional = true }
serde = { version = ">=1.0", optional = true }
typetag = { version = ">=0.2", optional = true }
