[package]
name = "tilted"
authors = ["Nguyen Thai Binh <binhnt.dev@icloud.com>"]
version = "0.4.0-beta.2"
edition = "2021"
description = "A toy mathematical interpreter written in Rust."
license = "MIT"
homepage = "https://github.com/SaltedPeanutButter/tilted"
repository = "https://github.com/SaltedPeanutButter/tilted"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tilted"
required-features = ["cli"]

[features]
default = ["serde", "cli"]
cli = ["dep:clap"]
serde = ["dep:serde", "dep:typetag"]

[dependencies]
clap = { version = "4.4.2", features = ["derive"], optional = true }
serde = { version = ">=1.0", optional = true }
typetag = { version = ">=0.2", optional = true }
